<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivFish"
        android:layout_width="84dp"
        android:layout_height="85dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_orange_fish"
        android:contentDescription="@string/img" />

    <TextView
        android:id="@+id/tName"
        android:layout_width="96dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="132dp"
        android:text="@string/nombre"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tType"
        app:layout_constraintEnd_toStartOf="@+id/tPrice"
        app:layout_constraintStart_toEndOf="@+id/ivFish"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tType"
        android:layout_width="93dp"
        android:layout_height="27dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="204dp"
        android:text="@string/tipo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivFish"
        app:layout_constraintTop_toBottomOf="@+id/tName" />

    <TextView
        android:id="@+id/tSize"
        android:layout_width="94dp"
        android:layout_height="27dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="203dp"
        android:text="@string/size"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivFish"
        app:layout_constraintTop_toBottomOf="@+id/tType" />

    <TextView
        android:id="@+id/tPrice"
        android:layout_width="67dp"
        android:layout_height="31dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/precio"
        android:textColor="#DD2C00"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>