<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/fab"
    tools:context=".tema7.ui.add.AddReceta">

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="665dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="115dp"
                android:layout_height="49dp"
                android:layout_marginStart="15dp"
                android:text="@string/t_tulo"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etTitulo"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/escriba_aqui"
                android:inputType="text"
                android:minHeight="48dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView24"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/preparaci_n"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPreparacion"
            android:layout_width="337dp"
            android:layout_height="127dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="37dp"
            android:layout_marginBottom="1dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/modo_de_preparaci_n"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:id="@+id/lyCategoria"
            android:layout_width="379dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/categor_a"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCategoria1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/categorias"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView28"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_marginStart="33dp"
            android:text="@string/ingredientes"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etIngredientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="4dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/inserte_ingredientes"
                android:inputType="text"
                android:minHeight="48dp"
                android:selectAllOnFocus="false" />

            <Button
                android:id="@+id/bAdd2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="56dp"
                android:layout_height="48dp"
                android:contentDescription="@string/agregar"
                app:icon="@android:drawable/ic_menu_send"
                app:iconGravity="start"
                app:iconPadding="0dp"
                app:iconSize="30dp"
                app:iconTint="#E67511" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/lv"
                android:layout_width="287dp"
                android:layout_height="240dp"
                android:layout_marginStart="30dp"
                android:textAlignment="textStart" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="200dp"
                android:background="#E89946"
                android:clickable="true"
                android:contentDescription="@string/fab"
                android:src="@android:drawable/ic_input_add"
                app:backgroundTint="#E6B37D" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>