<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tema6.Frag_t6_casos">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="668dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bCaso1_T6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="100dp"
            android:text="@string/caso_1"
            android:textColor="#F6F3F3"
            android:textSize="20sp"
            app:cornerRadius="60dp" />

        <Button
            android:id="@+id/bCaso2_T6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/caso_2"
            android:textColor="#F6F3F3"
            android:textSize="20sp"
            app:cornerRadius="60dp" />

        <Button
            android:id="@+id/bCaso3_T6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/caso_3"
            android:textColor="#F6F3F3"
            android:textSize="20sp"
            app:cornerRadius="60dp" />

        <Button
            android:id="@+id/bCaso4_T6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/caso_4"
            android:textColor="#F6F3F3"
            android:textSize="20sp"
            app:cornerRadius="60dp" />

        <Button
            android:id="@+id/bCaso5_T6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/caso_5"
            android:textColor="#F6F3F3"
            android:textSize="20sp"
            app:cornerRadius="60dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>