<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tema7.ui.add.AddLibros"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="83dp">

    <TextView
        android:id="@+id/textView37"
        android:layout_width="258dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:text="@string/agregue_imagen"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="74dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="116dp"
        android:gravity="center_vertical"
        android:text="@string/isbn"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="228dp"
        android:layout_height="49dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/escriba_aqui"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView33"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etNombre3"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="296dp"
        android:ems="10"
        android:hint="@string/escriba_aqui"
        android:inputType="textPersonName"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView33"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="221dp"
        android:layout_height="123dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/escriba_aqui"
        android:inputType="textPersonName"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="71dp"
        android:layout_height="41dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="54dp"
        android:gravity="center_vertical"
        android:text="@string/t_tulo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:text="@string/descripcion"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="205dp"
        android:layout_height="190dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:foregroundTint="#AE2424"
        android:src="@drawable/ic_menu_camera"
        app:tint="#E19E37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37"
        android:contentDescription="@string/img" />

</androidx.constraintlayout.widget.ConstraintLayout>