<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tema7.ui.eliminar.EliminarLibro" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView38"
                android:layout_width="90dp"
                android:layout_height="38dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/isbn"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEliminar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/escriba_aqui"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintStart_toEndOf="@+id/textView23"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <Button
            android:id="@+id/bEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/boton_eliminar"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="378dp"
            android:layout_height="384dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/img_libro_llorando"
            android:contentDescription="@string/img" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>